# techops

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  404.html  LICENSE  README.md  citing.bib  index.html  mkdocs.yaml  pyproject.toml  search.html
docs/: example-application-documentation-safesite-ai.md  example-data-documentation-voc-skin-tones.md  example-model-documentation-alisnet.md  index.md
example-application-documentation-safesite-ai/: index.html
example-data-documentation-voc-skin-tones/: index.html
example-model-documentation-alisnet/: index.html
figures/: mapping AI Act to data documentation template
search/: search_index.json
template/: application documentation.md  data documentation.md  model documentation.md
template-application-documentation/: index.html
template-data-documentation/: index.html
template-model-documentation/: index.html
template/other-templates/: zalando-data-card-template.md  zalando-model-card-template.md
